# AYA3_4

./: .gitignore  .travis.yml  CMakeLists.txt
include/: header.hpp
scripts/: checks.sh  coverage.sh  tests.sh
sources/: libfile.cpp  source.cpp
